--- a/css/theme/memphis.css
+++ b/css/theme/memphis.css
@@ -152,25 +152,73 @@ body {
   -o-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
 
+/* Slide-specific transition speed overrides */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/WebServer\/playground\/presentations\/mfwamw\/css\/theme\/source\/memphis\.scss}line{font-family:\0000340}}
+.reveal .slides section[data-transition-speed="fast"] {
+  -webkit-transition-duration: 400ms;
+  -moz-transition-duration: 400ms;
+  -ms-transition-duration: 400ms;
+  transition-duration: 400ms; }
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/WebServer\/playground\/presentations\/mfwamw\/css\/theme\/source\/memphis\.scss}line{font-family:\0000346}}
+.reveal .slides section[data-transition-speed="slow"] {
+  -webkit-transition-duration: 1600ms;
+  -moz-transition-duration: 1600ms;
+  -ms-transition-duration: 1600ms;
+  transition-duration: 1600ms; }
+
 /*********************************************
  * LAYOUT
  *********************************************/
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/WebServer\/playground\/presentations\/mfwamw\/css\/theme\/source\/memphis\.scss}line{font-family:\0000343}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/WebServer\/playground\/presentations\/mfwamw\/css\/theme\/source\/memphis\.scss}line{font-family:\0000358}}
 .reveal .headline {
   text-align: left; }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/WebServer\/playground\/presentations\/mfwamw\/css\/theme\/source\/memphis\.scss}line{font-family:\0000347}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/WebServer\/playground\/presentations\/mfwamw\/css\/theme\/source\/memphis\.scss}line{font-family:\0000362}}
 .reveal section img {
   border: 0;
   margin: 0;
   box-shadow: none;
   max-width: 100%; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/WebServer\/playground\/presentations\/mfwamw\/css\/theme\/source\/memphis\.scss}line{font-family:\0000369}}
+p.indent {
+  padding-left: 10%%; }
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/WebServer\/playground\/presentations\/mfwamw\/css\/theme\/source\/memphis\.scss}line{font-family:\0000373}}
+.text-right {
+  text-align: right; }
+
+/*********************************************
+ * Module
+ *********************************************/
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/WebServer\/playground\/presentations\/mfwamw\/css\/theme\/source\/memphis\.scss}line{font-family:\0000382}}
+ul.icon-list {
+  margin: 0;
+  padding: 40px 0 0; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/WebServer\/playground\/presentations\/mfwamw\/css\/theme\/source\/memphis\.scss}line{font-family:\0000386}}
+  ul.icon-list li {
+    list-style: none;
+    vertical-align: top;
+    padding-bottom: 40px; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/WebServer\/playground\/presentations\/mfwamw\/css\/theme\/source\/memphis\.scss}line{font-family:\0000392}}
+  ul.icon-list span {
+    display: inline;
+    vertical-align: top;
+    position: relative;
+    top: 18px;
+    left: 20px; }
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/WebServer\/playground\/presentations\/mfwamw\/css\/theme\/source\/memphis\.scss}line{font-family:\00003103}}
+.col2 {
+  width: 50%;
+  float: left; }
+
 /*********************************************
  * Typography
  *********************************************/
 /* line 35, ../../reveal.js/css/theme/template/theme.scss */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/WebServer\/playground\/presentations\/mfwamw\/css\/theme\/source\/memphis\.scss}line{font-family:\0000363}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/WebServer\/playground\/presentations\/mfwamw\/css\/theme\/source\/memphis\.scss}line{font-family:\00003117}}
 .reveal h1,
 .reveal h2,
 .reveal h3,
@@ -178,7 +226,7 @@ body {
 .reveal h5,
 .reveal h6 {
   margin: 0 0 20px 0;
-  color: #33363b;
+  color: #eb0066;
   font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
   line-height: 0.9em;
   letter-spacing: 0.02em;
@@ -186,39 +234,64 @@ body {
   text-shadow: none;
   font-weight: 800;
   letter-spacing: -0.05em; }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/WebServer\/playground\/presentations\/mfwamw\/css\/theme\/source\/memphis\.scss}line{font-family:\0000374}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/WebServer\/playground\/presentations\/mfwamw\/css\/theme\/source\/memphis\.scss}line{font-family:\00003128}}
   .reveal h1 span,
   .reveal h2 span,
   .reveal h3 span,
   .reveal h4 span,
   .reveal h5 span,
   .reveal h6 span {
+    color: #46474b;
     text-transform: none;
     letter-spacing: -0.025em;
     font-size: .9em;
     font-weight: 200; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/WebServer\/playground\/presentations\/mfwamw\/css\/theme\/source\/memphis\.scss}line{font-family:\00003136}}
+  .reveal h1.big,
+  .reveal h2.big,
+  .reveal h3.big,
+  .reveal h4.big,
+  .reveal h5.big,
+  .reveal h6.big {
+    font-size: 8em; }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/WebServer\/playground\/presentations\/mfwamw\/css\/theme\/source\/memphis\.scss}line{font-family:\0000383}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/WebServer\/playground\/presentations\/mfwamw\/css\/theme\/source\/memphis\.scss}line{font-family:\00003142}}
 .reveal p {
   font-weight: 200;
   margin-bottom: 20px; }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/WebServer\/playground\/presentations\/mfwamw\/css\/theme\/source\/memphis\.scss}line{font-family:\00003147}}
+.reveal blockquote {
+  width: 100%;
+  box-shadow: none; }
+
 /*********************************************
  * Background Covers
  *********************************************/
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/WebServer\/playground\/presentations\/mfwamw\/css\/theme\/source\/memphis\.scss}line{font-family:\0000393}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/WebServer\/playground\/presentations\/mfwamw\/css\/theme\/source\/memphis\.scss}line{font-family:\00003157}}
 html.cover body {
   background-position: center;
-  background-size: 80%; }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/WebServer\/playground\/presentations\/mfwamw\/css\/theme\/source\/memphis\.scss}line{font-family:\0000397}}
+  background-size: 80%;
+  opactiy: 0; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/WebServer\/playground\/presentations\/mfwamw\/css\/theme\/source\/memphis\.scss}line{font-family:\00003161}}
   html.cover body .reveal .slides {
     top: 10%; }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/WebServer\/playground\/presentations\/mfwamw\/css\/theme\/source\/memphis\.scss}line{font-family:\00003102}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/WebServer\/playground\/presentations\/mfwamw\/css\/theme\/source\/memphis\.scss}line{font-family:\00003168}}
 html.fmcg body {
-  background: url("/img/device-friendly-content-completev2.gif") 50% no-repeat; }
+  background: url("../../img/device-friendly-content-completev2.gif") 50% no-repeat; }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/WebServer\/playground\/presentations\/mfwamw\/css\/theme\/source\/memphis\.scss}line{font-family:\00003106}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/WebServer\/playground\/presentations\/mfwamw\/css\/theme\/source\/memphis\.scss}line{font-family:\00003172}}
 html.weekend body {
-  background: url("/img/Aussie_Mobile_Weekend.jpg") 50% no-repeat;
+  background: url("../../img/Aussie_Mobile_Weekend.jpg") 50% no-repeat;
   background-size: 100%; }
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/WebServer\/playground\/presentations\/mfwamw\/css\/theme\/source\/memphis\.scss}line{font-family:\00003177}}
+html.mobile-search body {
+  background: url("../../img/mobilegoogle.png") 50% no-repeat;
+  background-size: 80%; }
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Library\/WebServer\/playground\/presentations\/mfwamw\/css\/theme\/source\/memphis\.scss}line{font-family:\00003182}}
+html.otp body {
+  background: url("../../img/banner_otp.jpg") 50% no-repeat;
+  background-size: 60%; }
