--- a/css/theme/source/memphis.scss
+++ b/css/theme/source/memphis.scss
@@ -92,8 +92,7 @@ $selectionBackgroundColor: rgba(0, 0, 0, 0.99);
 
 .reveal ol {
 
-	list-style-position: inside;
-	margin: 0;
+	margin: 0 0 0 50px;
 	
 
 	li {
@@ -187,6 +186,11 @@ ul.icon-list {
  * Typography
  *********************************************/
 /* line 35, ../../reveal.js/css/theme/template/theme.scss */
+
+.reveal {
+	font-size: 2.3em;
+}
+
 .reveal h1,
 .reveal h2,
 .reveal h3,
@@ -198,9 +202,13 @@ ul.icon-list {
   font-family: $headingFont;
   line-height: 0.9em;
   letter-spacing: 0.02em;
-  text-transform: uppercase;
-  text-shadow: none;
+  // text-transform: uppercase;
+  // text-shadow: none;
   letter-spacing: -.05em;
+
+  font-family: $mainFont;
+		text-transform: none;
+		font-style: italic;
 
 	span {
 		color: #46474b;
@@ -208,6 +216,11 @@ ul.icon-list {
 		letter-spacing: -0.025em;
 		font-size: .9em;
 		font-weight: 300;
+
+		font-weight: 700;
+			display: inline-block;
+			clear: both;
+			padding-top: 0.4em;
 	}
 
 	&.big {
